src/main/kotlin/com/example/Api_rest_Segura/error/ErrorRepuesta.kt
package com.example.Api_rest_Segura.error

data class ErrorRespuesta(
    var message: String,
    var uri: String
)